Add missing tests