@@ -74,6 +74,16 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <testCompilerArgs>
+                        <arg>--add-reads=fr.insee.vtl.sdmx=org.junit.jupiter.api</arg>
+                        <arg>--add-reads=fr.insee.vtl.sdmx=org.assertj.core</arg>
+                    </testCompilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
                 <configuration>
